# user/internals/adapters/left/http/dto/validate-user.go
@@ -1,0 +1,5 @@
+package dto
+
+type ValidateUser struct {
+	Token string `json:"token" validate:"required"`
+}
